Updating the mobile nav bar collapse, adding an informational chevron with an arrow, when the nav bar is collapsed or open. Working on the fix for when the mobile nav bar is open, the items don't shift up and down during the opening animation. The nav bar brand needs to be inside the actual 'collapsing'  element.

--- a/src/styles/_baseColors.scss
+++ b/src/styles/_baseColors.scss
@@ -2,3 +2,4 @@ $coYellow: #FFD700;
 $coRed: #BF0A30;
 $coBlue: #002868;
 $coWhite: #FFFFFF;
+$dark: #2d4746;
