--- a/src/styles/common/header.scss
+++ b/src/styles/common/header.scss
@@ -12,6 +12,9 @@
   .navbar{
     border-radius: 0px;
   }
+  .navbar-brand{
+    position: relative;
+  }
   a {
     position: relative;
     color: $coWhite;
@@ -70,6 +73,7 @@
     margin-top: 2px;
     margin-bottom: 5px;
   }
+
   .navbar-toggler{
     border: none;
     outline: 0;
@@ -77,26 +81,29 @@
     position: relative;
     cursor: pointer;
   }
-  .navbar-toggler:focus{
-    border: 1px solid $coYellow;
-  }
+  //.navbar-toggler:focus{
+  //  border: 1px solid $coYellow;
+  //}
 }
 //navbar header styles end
 
 @media screen and(min-width: 768px){
-  .header {
-    .headerMenu{
-      float: right;
-    }
+  //.header {
+  //  .headerMenu{
+  //    float: right;
+  //  }
+  //}
+  .navbar-nav{
+    float: right;
   }
 }
 
 //navbar header responsiveness
 @media(max-width: 767px) {
 
-  .navbar-nav .nav-item + .nav-item {
+  .navbar-nav .nav-item + .nav-item{
     margin-left: 0;
-    padding-left:0;
+    //padding-left:0;
   }
   #navContent {
     clear: both;
